# data-narrator

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: publish.yml  tests.yml
datanarrator/: __init__.py  analyzer.py  narrator.py
examples/: ejemplo_titanic.py
notebooks/: tutorial.ipynb
tests/: test_narrator.py
