[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datanarrator"
version = "0.1.4"
description = "Convierte cualquier DataFrame de pandas en un análisis en lenguaje natural"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Iker Navarro", email = "tu@email.com" }
]
keywords = ["data science", "eda", "nlg", "pandas", "analysis"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "pandas>=1.5.0",
  "numpy>=1.23.0",
]

[project.urls]
Homepage = "https://github.com/ikernavarro4/data-narrator"
Repository = "https://github.com/ikernavarro4/data-narrator"

[tool.setuptools.packages.find]
where = ["."]
include = ["datanarrator*"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::FutureWarning",
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
