[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datanarrator"
version = "0.1.5"
description = "Convierte cualquier DataFrame de pandas en un análisis en lenguaje natural"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Iker Navarro", email = "tu@email.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "pandas>=1.5.0",
  "numpy>=1.23.0",
  "matplotlib>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/ikernavarro4/data-narrator"
Repository = "https://github.com/ikernavarro4/data-narrator"

[tool.setuptools.packages.find]
where = ["."]
include = ["datanarrator*"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::FutureWarning",
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
